Added ssl certificate to conf.  Relates to #1

--- a/configuration/capstone_monitor.conf
+++ b/configuration/capstone_monitor.conf
@@ -21,3 +21,14 @@
   ProxyPass         /  http://localhost:5000/
   ProxyPassReverse  /  http://localhost:5000/
 </VirtualHost>
+
+<IfModule mod_ssl.c>
+<VirtualHost _default_:443>
+  ServerName capstone.babraham.ac.uk
+  ProxyPass         /  http://localhost:5000/
+  ProxyPassReverse  /  http://localhost:5000/
+  SSLCertificateFile /etc/ssl/capstone.cer
+  SSLCertificateKeyFile /etc/ssl/capstone.key
+</VirtualHost>
+</IfModule>
+
